--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,10 @@ features = [
 [target.'cfg(target_vendor = "apple")'.dependencies.objc2]
 version = "0.5.0"
 features = ["verify"]
+
+[target.'cfg(target_os = "windows")'.dependencies.windows]
+version = "0.57.0"
+features = [
+    "Devices_Geolocation",
+    "deprecated",
+]
