--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,9 +27,18 @@ features = [
 version = "0.5.0"
 features = ["verify"]
 
+[target.'cfg(target_os = "windows")'.dependencies.tokio]
+version = "1.38.0"
+optional = true
+default-features = false
+features = ["rt"]
+
 [target.'cfg(target_os = "windows")'.dependencies.windows]
 version = "0.57.0"
 features = [
     "Devices_Geolocation",
     "deprecated",
 ]
+
+[features]
+async = ["dep:tokio"]
